# Smart-Camera-Stand

./: .gitignore  .gitmodules  CNN.md  ESP32_CAM_Pin_Connections.md  Introduction.md  MobileNetV2TF.ipynb  Model Selection.md  Python and Vectorization.md  README.md  notes1.md
Assets/: Model Selection.md
Assignments/: Autonomous_driving_application_Car_detection.ipynb  Building_your_Deep_Neural_Network_Step_by_Step.ipynb  Convolution_model_Application.ipynb  Convolution_model_Step_by_Step_v1.ipynb  Deep Neural Network - Application.ipynb  Image_segmentation_Unet_v2.ipynb  Logistic_Regression_with_a_Neural_Network_mindset .ipynb  Planar_data_classification_with_one_hidden_layer.ipynb  Residual_Networks.ipynb  Transfer_learning_with_MobileNet_v1.ipynb  ipynb.ipynb
CIFAR-100_Dataset/: CIFAR_100_dataset.ipynb  Dataset_preparation.md
ESP-WHO/: README.md
ESP-WHO/components/modules/: CMakeLists.txt
ESP-WHO/components/modules/ai/: who_ai_utils.cpp
ESP-WHO/components/modules/camera/: who_camera.c  who_camera.h
ESP-WHO/human_face_detection/: CMakeLists.txt  sdkconfig
EfficientNetLite0/: EfficientNetLite0Spec.ipynb  Makefile  README.md  effnet.cc
Image_Classification/: Model_Selection.md
MobilenetV2/: MobileNetV2.ipynb  README.md  mobilenetv2.tflite
Model/: MobileNetV2.ipynb  Model Selection.md
Notes/: AndrewNG Course 1.md  AndrewNG Course 2.md  ESP32.md
Transfer Learning Model/: MobileNetV2.ipynb
esp-who-test/components/modules/: CMakeLists.txt
esp-who-test/components/modules/ai/: CMakeLists.txt  who_ai_utils.cpp  who_human_face_detection.cpp
(+21 files in other folders)
